--- a/index.html
+++ b/index.html
@@ -1,33 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | NFT preview card component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | NFT preview card component</title>
 
-  Equilibrium #3429
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <div class="image-container">
+        <img
+          src="images/image-equilibrium.jpg"
+          alt="Equilibrium picture"
+          height="300px"
+          width="300px"
+          class="main-pic"
+        />
 
-  Our Equilibrium collection promotes balance and calm.
+        <div class="overlay">
+          <img
+            src="images/icon-view.svg"
+            alt="see more about equilibrium picture"
+            class="view-icon"
+          />
+        </div>
+      </div>
+      <main>
+        <h1>Equilibrium #3429</h1>
+        <p>Our Equilibrium collection promotes balance and calm.</p>
+        <div class="detail-container">
+          <span class="detail">
+            <img
+              src="images/icon-ethereum.svg"
+              alt="Ethereium icon"
+              class="icon"
+            />
+            <h2 class="light-color bold-text">0.041 ETH</h2>
+          </span>
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+          <span class="detail">
+            <img
+              src="images/icon-clock.svg"
+              alt="Clock icon"
+              class="icon-clock"
+            />
+            <h2 class="dark-color lightweight-text">3 days left</h2>
+          </span>
+        </div>
+      </main>
+      <hr class="divider" />
+      <footer>
+        <img
+          src="images/image-avatar.png"
+          alt="avatar image"
+          class="profile-pic"
+        />
+        <h3>Creation of <span class="hover-mode">Jules Wyvern</span></h3>
+      </footer>
+    </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Dina Rocio</a>.
+    </div>
+  </body>
 </html>
