update span to a simple div

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
-    <div class="container" role="contentinfo">
-      <div class="image-container">
+    <div class="container">
+      <header class="image-container">
         <img
           src="images/image-equilibrium.jpg"
           alt="Equilibrium picture"
@@ -35,28 +35,28 @@
             class="view-icon"
           />
         </div>
-      </div>
+      </header>
       <main>
         <h1>Equilibrium #3429</h1>
         <p>Our Equilibrium collection promotes balance and calm.</p>
         <div class="detail-container">
-          <span class="detail">
+          <div class="detail">
             <img
               src="images/icon-ethereum.svg"
               alt="Ethereium icon"
               class="icon"
             />
             <h2 class="light-color bold-text">0.041 ETH</h2>
-          </span>
+          </div>
 
-          <span class="detail">
+          <div class="detail">
             <img
               src="images/icon-clock.svg"
               alt="Clock icon"
               class="icon-clock"
             />
             <h2 class="dark-color lightweight-text">3 days left</h2>
-          </span>
+          </div>
         </div>
       </main>
       <hr class="divider" />
