replace by semantic HTML tags

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <header class="image-container">
         <img
           src="images/image-equilibrium.jpg"
@@ -36,7 +36,7 @@
           />
         </div>
       </header>
-      <main>
+      <section class="card-body">
         <h1>Equilibrium #3429</h1>
         <p>Our Equilibrium collection promotes balance and calm.</p>
         <div class="detail-container">
@@ -58,19 +58,19 @@
             <h2 class="dark-color lightweight-text">3 days left</h2>
           </div>
         </div>
-      </main>
+      </section>
       <hr class="divider" />
-      <footer>
+      <section class="creator">
         <img
           src="images/image-avatar.png"
           alt="avatar image"
           class="profile-pic"
         />
         <h3>Creation of <em class="hover-mode">Jules Wyvern</em></h3>
-      </footer>
-    </div>
+      </section>
+    </main>
 
-    <div class="attribution" role="doc-appendix">
+    <footer>
       Challenge by
       <a
         href="https://www.frontendmentor.io?ref=challenge"
@@ -80,6 +80,6 @@
       >
       Coded by
       <a href="https://github.com/DinaRocio" class="link-name">Dina Rocio</a>
-    </div>
+    </footer>
   </body>
 </html>
